# Obj_detection_app

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
app/: celery_app.py  fast.py  gradio_app.py
app/celery_task_app/: tasks.py
app/configs/: model_config.py  yolov8m.yaml
app/helpers/: utils.py
app/models_clients/: yolov8.py
model_repository/yolov8m/: config.pbtxt
